# EvoExperimentation

./: Bot.py  NCA.py  cmaes.py  genAlg.py  helper.py  pyproject.toml  test.py
exported/: my_evironment.json
